Documentation edits made through Mintlify web editor

--- a/concepts/autopilot.mdx
+++ b/concepts/autopilot.mdx
@@ -4,7 +4,7 @@ description: "Voice applications powered by LLMs."
 ---
 
 <Note>
-  The Autopilot is currently in overview mode and only available via the SDK, and the KnowledgeBase features have been disabled.
+  The Autopilot is currently in overview mode and the KnowledgeBase features have been disabled.
 </Note>
 
 Fonoster's Autopilot is a component within the platform that allows you to create powerful conversational experiences. It is built on top of Fonoster [Programmable Voice](./programmable-voice) and uses the latest advances in Large Language Models (LLMs) to provide a natural and engaging experience.
