Documentation edits made through Mintlify web editor

--- a/concepts/autopilot.mdx
+++ b/concepts/autopilot.mdx
@@ -31,7 +31,7 @@ intelligence:
   productRef: "llm.groq"
   config:
     conversationSettings:
-      firstMessage: "Hello, I'm your AI asssitant."
+      firstMessage: "Hello, I'm your AI assitant."
       systemPrompt: |
         You are a Customer Service Representative. You are here to help the caller with their needs.
       goodbyeMessage: "Thank you so much, bye!"
