--- a/concepts/autopilot.mdx
+++ b/concepts/autopilot.mdx
@@ -219,7 +219,7 @@ An important consideration when implementing your endpoints is that, when using 
 For additional details, refer to the [tool schema documentation](https://github.com/fonoster/fonoster/blob/main/mods/common/src/assistants/tools/toolSchema.ts).
 
 <Tip>
-  Use `operation.method` "post" for POST requests. If you want the Autopilot to wait for POST requests to complete, set `operation.waitForResponse` to `true`. For "get" requests, the Autopilot will wait for the response by default.
+  Use `operation.method` `post` for POST requests. If don't want the Autopilot to wait for POST requests to complete, set `operation.waitForResponse` to `false`. For `get` requests, the Autopilot will wait for the response by default.
 </Tip>
 
 ## Autopilot's Test Cases
