Documentation edits made through Mintlify web editor

--- a/changelog.mdx
+++ b/changelog.mdx
@@ -3,6 +3,6 @@ title: "Changelog"
 description: "Product updates and announcements"
 ---
 
-<Update label="July 2025" description="End-to-End Encrypted Calls">
-Chhangelog comming soon.
+<Update label="July 2025" description="Launching soon">
+Chhangelog launcing soon.
 </Update>
