Documentation edits made through Mintlify web editor

--- a/changelog.mdx
+++ b/changelog.mdx
@@ -4,5 +4,5 @@ description: "Product updates and announcements"
 ---
 
 <Update label="July 2025" description="Launching soon">
-Chhangelog launcing soon.
+Changelog launcing soon.
 </Update>
