--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,17 +1,19 @@
 ---
-title: 'Quickstart'
-description: 'Learn how to get started with Fonoster.'
+title: "Quickstart"
+description: "Learn how to get started with Fonoster."
 ---
 
 Most of Fonoster's use cases require an account, the Command-line interface, and a virtual phone number. This guide will walk you through the steps to start with Fonoster quickly.
 
 <Steps>
   <Step title="Request early access">
-    To get started, you need to request early access to Fonoster. You can do this by visiting the <a href="https://github.com/orgs/fonoster/discussions/695">GitHub Discussions</a> and following the instructions.
+    To get started, you'll need a Fonoster account. Sign up at https://app.fonoster.com/auth/signup
   </Step>
-
   <Step title="Create a simple voice application">
-    Voice applications in Fonoster require Node.js to run. If you don't have Node.js installed, you can download it from the <a href="https://nodejs.org/en/download/">official website</a>. Once you have Node.js installed, you can create a simple voice application by running the following commands:
+    Voice applications in Fonoster require Node.js to run. If you don't have Node.js installed, you can download it from the <a href="https://nodejs.org/en/download/">
+    official website</a>
+
+    . Once you have Node.js installed, you can create a simple voice application by running the following commands:
 
     ```bash
     mkdir voice-app
@@ -24,7 +26,7 @@ Most of Fonoster's use cases require an account, the Command-line interface, and
 
     ```javascript index.js
       const VoiceServer = require("@fonoster/voice").default;
-
+    
       new VoiceServer().listen(async (req, voice) => {
         await voice.answer();
         await voice.say("Hello from Fonoster!");
@@ -42,9 +44,11 @@ Most of Fonoster's use cases require an account, the Command-line interface, and
       Keep the application running for the next steps.
     </Note>
   </Step>
-
   <Step title="Publish your application">
-    To make your application available to the public, you must expose it to the internet. One way to do this is by using a service like <a href="https://ngrok.com/">ngrok</a>. You can install ngrok by running the following command:
+    To make your application available to the public, you must expose it to the internet. One way to do this is by using a service like <a href="https://ngrok.com/">
+    ngrok</a>
+
+    . You can install ngrok by running the following command:
 
     ```bash
     npm install -g ngrok
@@ -58,11 +62,13 @@ Most of Fonoster's use cases require an account, the Command-line interface, and
 
     Your output should look like this:
 
-    <img width="100%" src="/images/tunneling-with-ngrok.png" />
+    <img
+      width="100%"
+      src="/images/tunneling-with-ngrok.png"
+    />
 
     This will give you a public endpoint that you can use to access your application.
   </Step>
-
   <Step title="Link a virtual phone number">
     Follow the next steps to link a virtual phone number to your application:
 
@@ -84,7 +90,6 @@ Most of Fonoster's use cases require an account, the Command-line interface, and
 
         If the installation was successful, you should see the version number of the command-line tool.
       </Accordion>
-
       <Accordion title="Log in to a Fonoster Workspace">
         Before using the command-line tool, log in to a Workspace. You can do this by running the following command:
 
@@ -92,9 +97,8 @@ Most of Fonoster's use cases require an account, the Command-line interface, and
         fonoster workspaces:login
         ```
 
-        This command will prompt you to enter your *AccessKeyId* and *AccessKeySecret*. Once you have entered this information, you will be logged in to your Workspace.
+        This command will prompt you to enter your _AccessKeyId_ and _AccessKeySecret_. Once you have entered this information, you will be logged in to your Workspace.
       </Accordion>
-
       <Accordion title="Create a new Application">
         To create a new Application, you can use the following command:
 
@@ -106,7 +110,10 @@ Most of Fonoster's use cases require an account, the Command-line interface, and
 
         Your output should look like this:
 
-        <img width="100%" src="/images/create-application.png" />
+        <img
+          width="100%"
+          src="/images/create-application.png"
+        />
 
         To can list your existing applications with the following command:
 
@@ -114,7 +121,6 @@ Most of Fonoster's use cases require an account, the Command-line interface, and
         fonoster applications:list
         ```
       </Accordion>
-
       <Accordion title="Link a Twilio phone number">
         To link a Twilio phone number to your application, you can use the following command:
 
@@ -122,7 +128,7 @@ Most of Fonoster's use cases require an account, the Command-line interface, and
         fonoster sipnet:numbers:linkTwilioNumber
         ```
 
-        You will be asked to enter an existing virtual phone number, the *Twilio SID*, and the *Twilio Auth Token*. Once you have entered this information, the Twilio phone number will be linked to your application.
+        You will be asked to enter an existing virtual phone number, the _Twilio SID_, and the _Twilio Auth Token_. Once you have entered this information, the Twilio phone number will be linked to your application.
 
         To confirm that the phone number was linked successfully, you can run the following command:
 
@@ -136,7 +142,6 @@ Most of Fonoster's use cases require an account, the Command-line interface, and
           Twilio is used as an example. You can use other SIP providers as well.
         </Tip>
       </Accordion>
-
       <Accordion title="Make an outbound call">
         You can use the command-line tool or the SDK to make an outbound call. To make an outbound call, first, you need the reference of the application you created. You can get the reference by running the following command:
 
@@ -156,20 +161,20 @@ Most of Fonoster's use cases require an account, the Command-line interface, and
 
         ```javascript call.js
         const SDK = require("@fonoster/sdk");
-
+        
         # Replace with your Workspace Access Key Id
         const client = SDK.Client({ accessKeyId: "00000000-0000-0000-0000-000000000000" });
-
+        
         client.loginWithApiKey("AP0eerv2g7qow3e950k7twu4rvydcunq3k", "fNc...")
           .then(async() => {
             const calls = new SDK.Calls(client);
-
+        
             const response = await calls.createCall({
               from: "+18456134823",
               to: "+17853134923",
               appRef: "4b01c9b1-8cb1-48fb-bd49-f3daf13463a9"
             })
-
+        
             console.log(response);
           });
         ```
@@ -186,7 +191,6 @@ Now that you have created your first Application learn more about Fonoster's adv
   <Card title="Programmable Voice" icon="rocket-launch" href="https://discord.com/invite/4QWgSz4hTC">
     Learn more about the Programmable Voice API and how to build advanced voice applications.
   </Card>
-
   <Card title="SDKs" icon="code" href="https://discord.com/invite/4QWgSz4hTC">
     Learn how to use the Node.js and Web SDKs to interact with Fonoster programmatically.
   </Card>
