fix: remove deprecated models and upgrade langchain dependency

--- a/mods/autopilot/.intro.md
+++ b/mods/autopilot/.intro.md
@@ -83,12 +83,13 @@ Take the endpoint provided by ngrok and configure it in your Fonoster account. Y
 
 The Autopilot supports multiple language model providers. The following is a list of the supported providers:
 
-| Provider   | Description                                                 | Supported models
-|------------|-------------------------------------------------------------|--------------------------------------------------------------------------------------------|
-| Google     | Google provides various Gemini models for conversational AI | `gemini-2.0-flash`, `gemini-2.0-flash-lite`, `gemini-2.5-pro`, `gemini-2.5-flash`, `gemini-2.5-flash-lite`, `gemini-3-pro-preview`, `gemini-3-flash-preview` |
-| OpenAI     | OpenAI provides various GPT models for conversational AI    | `gpt-4o`, `gpt-4o-mini`, `gpt-3.5-turbo`, `gpt-4-turbo`                                    |
-| Groq       | Groq offers high-performance AI models optimized for speed  | `llama-3.3-70b-versatile`                                                                  |
-| Ollama     | Self-hosted Ollama models                                   | `llama3-groq-tool-use`                                                                     |
+| Provider   | Description                                                    | Supported models
+|------------|----------------------------------------------------------------|--------------------------------------------------------------------------------------------|
+| Google     | Google provides various Gemini models for conversational AI    | `gemini-2.0-flash`, `gemini-2.0-flash-lite`, `gemini-2.5-pro`, `gemini-2.5-flash`, `gemini-2.5-flash-lite`, `gemini-3-pro-preview`, `gemini-3-flash-preview` |
+| OpenAI     | OpenAI provides various GPT models for conversational AI       | `gpt-4o`, `gpt-4o-mini`, `gpt-3.5-turbo`, `gpt-4-turbo`                                    |
+| Groq       | Groq offers high-performance AI models optimized for speed     | `llama-3.3-70b-versatile`                                                                  |
+| Ollama     | Self-hosted Ollama models                                      | `llama3-groq-tool-use`                                                                     |
+| Anthropic  | Anthropic provides various Claude models for conversational AI | Models temporarily unavailable                                                             |
 
 > We are constantly updating the list of supported providers and models. If you have a specific model you would like to use, please let us know.
 
